--- a/paper/Interpreting Random Forest Predictions for Firearm Identification Using LIME.Rmd
+++ b/paper/Interpreting Random Forest Predictions for Firearm Identification Using LIME.Rmd
@@ -36,6 +36,8 @@ Recently, the scientific community has been encouraging the inclusion of more da
 
 While random forest models often result in good predictions as seen in Hare, Hofmann, and Carriquiry, it is well known that a disadvantage of random forest models and other machine learning techniques is that it is difficult to interpret the models (reference?). For example, it is not possible to tell which variables played an important role in the creation of individual predictions. This issue led to the development of LIME (reference), which is an algorithm that examines the behavior of the complicated model on a local scale around a new prediction using a linear regression model. This allows for the ability to understand which were the driving variables that led to a prediction of interest.
 
+(should probably list other current methods for interpreting random forests)
+
 Since firearm identification identification is commonly used as evidence for convictions in court cases, it is important to be able to understand and assess the model that is being used to quantify the probability that a bullet was fired from a gun. LIME provides the ability to understand which were the key variables used by the random forest model to make a prediction, which would allow firearm examiners to check whether or not the predictions created by the random forest are based on reasonable variables. 
 
 This paper provides an example of the application of LIME to a bullet matching problem. (provide more details about what is contained in the papers - i.e. section 2 describes the Hamby data; section 3 describes the random forest model and LIME; ...)
@@ -318,9 +320,11 @@ if(!file.exists("../data/hamby224_lime_comparisons.rds")) {
 }
 ```
 
-## Visualizing the LIME Explanations
+## Development of Shiny App for Visualizing the LIME Explanations
 
 # Results
+
+- show examples of using the app and what we have learned from the LIME explanations
 
 # Discussion
 
